adds index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Xiaorui Xie/title>
 </head>
 <body>
-    Enter the company to work, constantly update knowledge, if necessary 
-    to obtain a higher degree, to realize the value of life.
+    Enter the company to work, constantly update knowledge.
 </body>
 </html>
